--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "art-template": "^4.13.2",
     "cors": "^2.8.5",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.2",
+    "express-art-template": "^1.0.1",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.14",
