--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.14",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "vue": "^2.6.12"
   }
 }
