--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "errorhandler": "^1.5.1",
     "express": "^4.17.2",
     "express-art-template": "^1.0.1",
+    "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.14",
